[package]
name = "terrust"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "*", features = ["wayland"] }
bevy = "*"
bevy_egui = "*"
rand = "*"
bevy_flycam = "*"
noise = "0.7"
bevy_atmosphere = "*"
meshx = "*"

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
opt-level = 3