[package]
name = "terrust"
version = "0.1.5"
edition = "2021"

[dependencies]
bevy = { version = "*", features = ["wayland"] }
# bevy = "*"
bevy_egui = "*"
rand = "*"
bevy_flycam = "*"
noise = "*"
bevy_atmosphere = "*"
meshx = "*"

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
opt-level = 3